$Id$
===============================================================

246	Luke Howard <lukeh@padl.com>

	* paged results and RFC2307bis support are now always
	  compiled in; they are by default disabled unless
	  you configured with --enable-paged-results and
	  --enable-rfc2307bis, respectively. See nss_ldap(5)
	  for configuration options.
	* fix for BUG#219: paged results delivers wrong results
	* fix for BUG#222: use asynchronous start TLS if
	  available, using bind_timeout value
	* fix for BUG#235: make DNS SRV lookup domain
	  configurable (nss_srv_domain)
	* fix for BUG#240: return "*" rather than "x" for
	  userPassword if not present
	* fix for BUG#245: paged results broken since nss_ldap-241
	* patch from Ralf Haferkamp <rhafer@suse.de>:
	  compile fix for IPv6
	* compile for Solaris
	* schema mapping is always enabled, cleanup schema
	  mapping code
	* allow for map-specific objectclass mapping
	* partial implementation of Solaris Simplified LDAP
	  API, allows automountd support on Solaris via nss_ldap
	* for Linux automounter, always close connection after
	  endautomntent() to avoid persistent connection
	* add nss_connect_policy argument to ldap.conf

245	Luke Howard <lukeh@padl.com>

	* don't leak LDAP connection if do_bind() failed or
	  descriptor owner had changed. If do_bind() failed the
	  underlying descriptor would also be leaked, causing a
	  large number of sockets to be consumed during failover
	* add nss_initgroups_ignoreusers parameter to ldap.conf,
	  returns NOTFOUND if nss_ldap's initgroups() is called
	  for users (comma separated)
	* try to deal with systems that have headers for both
	  versions of the SASL library installed
	* better logging of failed connections and reconnections
	* patch from Dean Michaels <dean@interdynamix.com>:
	  build with Netscape 5 library on Solaris
	* patch from Ralf Haferkamp <rhafer@suse.de>:
	  manual page fix to bind_policy

244	Luke Howard <lukeh@padl.com>
